e2e/__tests__/__snapshots__/module_name_mapper.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`moduleNameMapper correct configuration 1`] = `
"PASS __tests__/index.js
  âœ“ moduleNameMapping correct configuration

"
`;

exports[`moduleNameMapper wrong configuration 1`] = `
"FAIL __tests__/index.js
  â— Test suite failed to run

    Configuration error:

    Could not locate module ./style.css mapped as:
    no-such-module.

    Please check your configuration for these entries:
    {
      \\"moduleNameMapper\\": {
        \\"/\\\\.(css|less)$/\\": \\"no-such-module\\"
      },
      \\"resolver\\": null
    }

       8 | 'use strict';
       9 | 
    > 10 | require('./style.css');
         | ^
      11 | 
      12 | module.exports = () => 'test';
      13 | 

      at packages/jest-resolve/build/index.js:411:17
      at index.js:10:1

"
`;
